--- a/views/index.html
+++ b/views/index.html
@@ -18,10 +18,72 @@
     <script src="/scripts/app.js"></script>
   </head>
   <body>
+
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
-          <h1>Under Construction</h1>
+
+         <section class="container">
+     <div class="row">
+
+    <!-- BEGIN FORM SAMPLE -->
+
+    <section id='album' class="container">
+      <div class="row">
+      <div class="col-md-10 col-md-offset-1">
+
+        <form class="form-horizontal">
+          <fieldset>
+
+            <!-- Form Name -->
+            <legend>Add New Destination</legend>
+
+            <!-- Text input-->
+            <div class="form-group">
+              <label class="col-md-4 control-label" for="name">Destination Name</label>
+              <div class="col-md-4">
+              <input id="name" name="name" type="text" placeholder="" class="form-control input-md" required="">
+
+              </div>
+            </div>
+
+            
+
+            <!-- Text input-->
+            <div class="form-group">
+              <label class="col-md-4 control-label" for="Description">Description</label>
+              <div class="col-md-4">
+              <input id="Description" name="Description" type="text" placeholder="White-sand beaches with lush vegetation" class="form-control input-md">
+              </div>
+            </div>
+
+            <!-- Textarea -->
+            <div class="form-group">
+              <label class="col-md-4 control-label" for="features">Features</label>
+              <div class="col-md-4">
+                <textarea class="form-control" id="features" name="features">humid, high-altitude</textarea>
+              </div>
+            </div>
+
+                <!-- Text input-->
+            <div class="form-group">
+              <label class="col-md-4 control-label" for="Activities">Activities</label>
+              <div class="col-md-4">
+              <input id="Activities" name="Activities" type="text" placeholder="Scuba diving, hiking" class="form-control input-md">
+              </div>
+            </div>
+            <button type="submit">Add new destination</button> 
+
+              </div>
+            </div>
+          </fieldset>
+        </form>
+      </div>
+      </div>
+    </section>
+
+
+
           <h4><a href="/api">Read My API Documentation</a></h4>
         </div>
       </div>
